--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
 streamlit==1.37.0
-numpy==1.26.4
-pandas==2.2.2
+numpy==1.24.3
+pandas==2.0.3
 scikit-learn==1.3.2
-joblib==1.3.2
-librosa==0.10.2.post1
-soundfile==0.12.1
-audioread==3.0.1
-scipy==1.11.4
-numba==0.58.1
-llvmlite==0.41.1
-resampy==0.4.3
+librosa==0.10.1
+matplotlib==3.7.2
+seaborn==0.12.2
 plotly==5.22.0
+altair==5.0.1
