--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit==1.7.1
+streamlit
+librosa
+matplotlib
+scikit-learn==1.7.1
 numpy==2.2.6
-pandas==1.5.1
-scikit-learn==1.3.2
-librosa==0.10.1
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.22.0
-altair==5.0.1
+joblib==1.5.1
